--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Github Test Project 2</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<h2>Helloooooo</h2>
